# CmakeBuildTypeLibraryRelease

./: CMakeLists.txt  README.md  main.cpp
externalLibrary/: CMakeLists.txt  implementation.cpp  privateHeader.hpp
externalLibrary/include/externalLibrary/: publicHeader.hpp
